<resources>
    <string name="default_web_client_id">511013017939-7usg0tnq8f9gikvmhp8fngu7k11uu5p5.apps.googleusercontent.com</string>
    <string name="app_name">Food Planner</string>
    <string name="sign_up_with_email">Sign up with Email</string>
    <string name="login_with_email">Login With Email</string>
    <string name="login_button">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign up</string>
    <string name="login_as_guest">Login As Guest</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="lists">Lists</string>
    <string name="favorite">Favorite</string>
    <string name="daily_inspiration">Daily Inspiration</string>
    <string name="country">Country</string>
    <string name="ingredient">Ingredient</string>
    <string name="category">Category</string>
    <string name="categories">Categories</string>
    <string name="countries">Countries</string>
    <string name="enter_meal_name">Enter Meal Name</string>
    <string name="hello_user">Hello </string>
    <string name="meal_of_the_day">Meal of The Day</string>
    <string name="backup_data">Backup Data</string>
    <string name="sign_out">Sign out</string>
    <string name="update_picture">Update Picture</string>
    <string name="remove_picture">Remove Picture</string>
    <string name="ingredients">Ingredients : </string>
    <string name="steps">Steps : </string>
    <string name="meal_name">Meal Name : </string>
    <string name="meal_country">Meal Country : </string>
    <string name="week_plan">Week Plan</string>
    <string name="hello">"Hello "</string>
    <string name="hello_guest">Hello Guest</string>
    <string name="guest">Guest</string>
    <string name="fav_guest">Guest cannot add Meal to Favorite</string>
    <string name="week_guest">Guest cannot make Week Plan</string>
    <string name="guest_text">We regret to inform you that there is nothing to display at the moment. Please provide internet or log in with an account to view the application content.</string>
    <string name="favorite_meals">Favorite Meals</string>
    <string name="is_removed">" is removed"</string>
    <string name="backup_successful">Backup Successful!</string>
    <string name="backup_failed">Backup Failed Please Connect To Internet First!</string>
    <string name="user_profile_updated">User profile picture updated.</string>
    <string name="failed_update_picture">Failed to update profile picture.</string>
    <string name="user_picture_removed">User profile picture removed.</string>
    <string name="failed_remove_picture">Failed to remove profile picture.</string>
    <string name="login_success">Login Success.</string>
    <string name="check_email_password">Check the Email and Password.</string>
    <string name="check_internet_connection">Check your internet Connection.</string>
    <string name="connection_restored">The Connection has been Restored</string>
    <string name="no_connection">There is No Internet Connection</string>
    <string name="back_again">Click BACK again to exit</string>
    <string name="error_category_country">Error the item is not category or country.</string>
    <string name="signup_successful">Signup successful!</string>
    <string name="email_empty">Email Shouldn\'t be Empty</string>
    <string name="invalid_email">Invalid email format</string>
    <string name="password_empty">Password Shouldn\'t be Empty</string>
    <string name="password_format">Password must be at least 8 characters and contain letters and numbers and symbol</string>
    <string name="username_empty">Username Shouldn\'t be Empty</string>
    <string name="username_start_number">Username Shouldn\'t start with Number</string>
    <string name="google_failed">Google sign in failed. Please try again.</string>
    <string name="auth_failed">Authentication Failed.</string>
    <string name="select_meal_type">Select Meal Type</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="added_to_week_plan">Added to Week Plan</string>

</resources>